2010-04-16  Sebastien Pouliot  <sebastien@ximian.com>

	* mscorlib.auto.ssc: regenerated wrt r155867

2010-04-20  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.auto.ssc: Update the sec. attrs.

2010-04-16  Sebastien Pouliot  <sebastien@ximian.com>

	* mscorlib.auto.sc: regenerated wrt 155643
	* mscorlib.auto.ssc: regenerated wrt 155643
	* System.Windows.auto.ssc: regenerated wrt 155643

2010-04-15  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.auto.sc: Regenerated

2010-04-14  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.auto.sc: regen.

2010-04-12  Sebastien Pouliot  <sebastien@ximian.com>

	* mscorlib.auto.ssc: regenerated wrt 155239
	* System.Windows.auto.s[s]c: regenerated wrt 155239

2010-04-08  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.auto.sc: regenerated wrt 155069

2010-04-06  Sebastien Pouliot  <sebastien@ximian.com>

	* mscorlib.auto.ssc: regenerated wrt 154876
	* System.Windows.auto.sc: regenerated wrt 154876

2010-04-05  Sebastien Pouliot  <sebastien@ximian.com> 

	* System.Windows.auto.ssc: regenerated wrt 154794

2010-04-05  Sebastien Pouliot  <sebastien@ximian.com>

	* mscorlib.auto.ssc: : Update mono/mcs requirement to 154790

2010-04-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.auto.ssc: regen

2010-03-30  Sebastien Pouliot  <sebastien@ximian.com>

	* mscorlib.auto.ssc: : Update mono/mcs requirement to 154485
	* System.Windows.auto.s[s]c: regenerated

2010-03-30  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.auto.sc: regen.

2010-03-29  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.auto.ssc: Add enums to our type system so
	  that we don't lose type information when attempting to parse
	  them from xaml.

2010-03-29  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.Browser.auto.ssc: Change to ScriptObject ctor

2010-03-26  Sebastien Pouliot  <sebastien@ximian.com> 

	* System.Windows.auto.s[s]c: SC to SSC on *_new, removal of 
	SSC on .ctor
