@@ -1,5 +1,5 @@
 # [SecuritySafeCritical] needed inside System.Windows to call all [SecurityCritical] methods
-# 547 methods
+# 548 methods
 
 +SSC-M: System.Void Mono.Events::SafeAction(System.Action)
 +SSC-M: System.Object Mono.NativeDependencyObjectHelper::GetValue(Mono.INativeDependencyObjectWrapper,System.Windows.DependencyProperty)
@@ -178,6 +178,7 @@
 +SSC-M: System.IntPtr Mono.SafeNativeMethods::row_definition_collection_new()
 +SSC-M: System.IntPtr Mono.SafeNativeMethods::run_new()
 +SSC-M: System.IntPtr Mono.SafeNativeMethods::scale_transform_new()
++SSC-M: System.IntPtr Mono.SafeNativeMethods::section_new()
 +SSC-M: System.IntPtr Mono.SafeNativeMethods::security_settings_new()
 +SSC-M: System.IntPtr Mono.SafeNativeMethods::setter_new()
 +SSC-M: System.IntPtr Mono.SafeNativeMethods::setter_base_new()
