@@ -1,3 +1,7 @@
+2010-04-27  Alan McGovern  <amcgovern@novell.com>
+
+	* System.Windows.auto.ssc: regen.
+
 2010-04-16  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* mscorlib.auto.ssc: regenerated wrt r155867
